# rektstarsnet

./: .gitignore  Cargo.toml  Makefile  README.md  data.csv
rektstarsnet-release/: data.csv  rektstarsnet
rektstarsnet-release/static/: style.css
rektstarsnet-release/templates/: bojak.html  cache.html  index.html
src/: main.rs
static/: style.css
templates/: 404.html  cache.html  example.html  index.html  main.html  teto.html
