[package]
name = "rektstarsnet"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
futures-util = "0.3.32"
tokio = { version = "1.52.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["fs"] }
